# python-classes

./: .gitignore  README.md  pyproject.toml
homework/: data.py  functions.py
lessons/: functions.py  sum.py
slides/: README.md  functions.html  package-lock.json  package.json  webpack.config.js
slides/src/: index.js
slides/src/md/: functions.md
tests/: test_data.py  test_functions.py  test_sum.py
