[tool.poetry]
name = "lessons"
version = "0.0.1"
description = "Python lessons with tests and notes."

license = "MIT"

authors = [
    "Pasha <sigmat@proton.me>",
    "Alannia <alanniasadikov@gmail.com>"
]

packages = [
    { include = "lessons" },
]

[tool.poetry.dependencies]
python = ">=3.7"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

