[tool.poetry]
name = "lessons"
version = "0.0.1"
description = "Python lessons with tests and notes."

license = "MIT"

authors = [
    "Pasha <sigmat@proton.me>",
    "Alannia <alanniasadikov@gmail.com>"
]

packages = [
    { include = "lessons" },
]

[tool.poetry.dependencies]
python = ">=3.9.6"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.990"
pycodestyle = "^2.9.1"
ipython = "^8.6.0"

